# Remy

./: .gitignore  ARCHITECTURE.md  PROJECT_CONTEXT.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  Bootstrap.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: background_mode.rs  clipboard_monitor.rs  content_indexer.rs  global_hotkey.rs  launch_at_login.rs  lib.rs  main.rs  ocr_engine.rs  quick_search.rs  tray.rs
src-tauri/src/commands/: clipboard.rs  content_index.rs  favorites.rs  file_actions.rs  file_scanner.rs  mod.rs  persistence.rs  saved_searches.rs  settings.rs  tags.rs
src-tauri/src/persistence/: mod.rs  settings.rs  store.rs
src/components/: EmptyState.tsx  FavoriteStarButton.tsx  FavoritesPage.tsx  FileDetailsPanel.tsx  FileMemoryTimeline.tsx  HighlightedSnippet.tsx  IndexMetadataLine.tsx  IndexedPage.tsx  IndexingQueueStatus.tsx  MemoriesListRow.tsx  MemoriesPage.tsx  MemoryItemCard.tsx  MemoryItemThumbnail.tsx  MemoryTagsSection.tsx  MemoryTypeFilter.tsx  OnboardingModal.tsx  QuickSearchOverlay.tsx  SaveSearchModal.tsx  SavedSearchesSection.tsx  SearchBar.tsx  SettingsPage.tsx  Sidebar.tsx  SourceBadge.tsx  SourceFilter.tsx  TagPill.tsx  TimelineToolbar.tsx  WelcomeOnboarding.tsx
src/hooks/: useBackgroundIndexing.ts  useFavorites.ts  useFileScanner.ts  useOnboarding.ts  usePreviewEmptyStates.ts  useSavedSearches.ts  useSettings.ts  useTags.ts  useWatchedFolders.ts
src/lib/: contentSearch.ts  favoriteSnapshot.ts  favorites.ts  fileContentPreview.ts  filePaths.ts  formatLastUpdated.ts  imageSrc.ts  indexMetadata.ts  (+19 more)
(+30 files in other folders)
