[package]
name = "remy"
version = "0.1.0"
description = "Remy — local-first memory for your computer"
authors = ["Remy"]
edition = "2021"

[lib]
name = "remy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
pdf-extract = "0.9"
zip = "2"
quick-xml = "0.37"
arboard = "3"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
